kubernetes/deploy/proxies/internal/octoprint/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: octoprint
subsets:
  - addresses:
      - ip: 192.168.100.5
    ports:
      - port: 80
        name: http
