kubernetes/deploy/proxies/internal/octoprint/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: octoprint
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`octoprint.vandeneede.org`)
    services:
    - name: octoprint
      port: 80
